2009-12-23  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tune/common.c, tune/speed.c, tune/speed.h: Support for measuring
	mpn_toom8h_mul and mpn_toom8_sqr speed.

	* mpn/generic/toom_eval_pm2exp.c: Fix ASSERTs.

	* mpn/generic/toom8h_mul.c: New file.
	* mpn/generic/toom8_sqr.c: New file.
	* mpn/generic/toom_interpolate_16pts.c: New file.
	* gmp-impl.h: Provide corresponding declarations.
	* configure.in (gmp_mpn_functions): List toom_interpolate_16pts,
	toom8h_mul, and toom8h_sqr.
	* tests/mpn/t-toom8h.c: New test program.

	* mpn/generic/toom6_sqr.c: New file, was part of toom6h_mul.
	* mpn/generic/toom6h_mul.c: Removed _sqr.

	* mpn/generic/mulmod_bnm1.c: Nailify CRT.
	* mpn/generic/sqrmod_bnm1.c: Likewise.

	* mpn/generic/mullo_n.c: Split dc_mullo_n function;
	ALLOC memory at once.

	* mpn/Makefile.am (nodist_EXTRA_libmpn_la_SOURCES): Update.

	* mpn/generic/toom6h_mul.c: Add prefix to toom_interpolate_12pts.
	* mpn/generic/toom_interpolate_12pts.c: Likewise.

	* mpn/generic/invertappr.c (mpn_bc_invertappr): Use mpn_divrem_2.
	* mpn/generic/invert.c: Faster basecase, use mpn_sbpi1_div_q.

	* mpn/generic/toom_eval_pm2exp.c: Assert support for degree 3.
	* mpn/generic/toom6h_mul.c: Avoid obsolete _itch function.

2009-12-23  Torbjorn Granlund  <tege@gmplib.org>

	* tune/common.c, tune/speed.c, tune/speed.h: Support for measuring
	mpn_mod_1_1p, mpn_mod_1s_2p, mpn_mod_1s_3p, mpn_mod_1s_4p.

	* tests/mpz/t-powm.c: Test mpz_powm_sec.

	* mpz/powm_sec.c: New file.
	* gmp-h.in: Declare it.
	* Makefile.am, mpz/Makefile.am: Compile it.
	* doc/gmp.texi: Document it.

	* mpn/generic/powm_sec.c (mpn_powm_sec_itch): New function.
	(mpn_powm_sec): Use passed scratch, no local allocation.
	Allow exp argument = 1.
	(win_size): Start loop from 1.

	* mpn/generic/powm.c (win_size): Start loop from 1.

2009-12-22  Torbjorn Granlund  <tege@gmplib.org>

	* tests/mpn/t-div.c: New file.
	* tests/mpn/Makefile.am: Compile it.

	* mpn/generic/mu_divappr_q.c: Handle quotient overflow.
